--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <header class="header">
-      <img src="img/omnifood-logo.png" class="logo" alt="Omnifood logo" />
+      <a href="#">
+        <img src="img/omnifood-logo.png" class="logo" alt="Omnifood logo"
+      /></a>
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">Section 1</a></li>
@@ -551,6 +553,68 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container grid grid--footer">
+        <div class="logo-col">
+          <a class="footer-logo" href="#">
+            <img src="img/omnifood-logo.png" class="logo" alt="Omnifood logo"
+          /></a>
+          <ul class="social-links">
+            <li>
+              <a class="footer-link" href="#"></a
+              ><ion-icon class="social-icon" name="logo-instagram"></ion-icon>
+            </li>
+            <li>
+              <a class="footer-link" href="#"></a
+              ><ion-icon class="social-icon" name="logo-facebook"></ion-icon>
+            </li>
+            <li>
+              <a class="footer-link" href="#"></a
+              ><ion-icon class="social-icon" name="logo-twitter"></ion-icon>
+            </li>
+          </ul>
+          <p class="copyright">
+            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+          </p>
+        </div>
+        <div class="address-col">
+          <p class="footer-heading">Contact Us</p>
+          <address class="contacts">
+            <p class="address">623 Harrison St., 2nd Floor, San Francisco, CA 94107</p>
+            <p>
+              <a class="footer-link" href="tel:+14152016370">415-201-6370</a><br />
+              <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+            </p>
+          </address>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Account</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Create account</a></li>
+            <li><a class="footer-link" href="#">Sign in</a></li>
+            <li><a class="footer-link" href="#">iOS app</a></li>
+            <li><a class="footer-link" href="#">Android app</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Company</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">About Omnifood</a></li>
+            <li><a class="footer-link" href="#">For Business</a></li>
+            <li><a class="footer-link" href="#">Cooking partners</a></li>
+            <li><a class="footer-link" href="#">Careers</a></li>
+          </ul>
+        </div>
+        <div class="nav-col">
+          <p class="footer-heading">Resources</p>
+          <ul class="footer-nav">
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
+            <li><a class="footer-link" href="#">Help center</a></li>
+            <li><a class="footer-link" href="#">Privacy & terms</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
