--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Omnifood</title>
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" class="logo" alt="Omnifood logo"
       /></a>
