--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc. All rights reserved.
           </p>
         </div>
         <div class="address-col">
@@ -633,5 +633,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script defer src="js/script.js"></script>
   </body>
 </html>
